--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Projects:</strong> <span>Upon request</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>monatrad.dm@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>monatrad30@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -202,7 +202,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">HTML5 - CSS3 <i class="val">90%</i></span>
+              <span class="skill">Google And Hootsuite Analytics <i class="val">94%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -338,7 +338,7 @@
           <h2>Portfolio</h2>
         </div>
 
-        <img src="assets/img/portfolio.jpeg" alt="">
+        <img width="70%" src="assets/img/portfolio.jpeg" alt="">
 
         </div>
 
