changing the resume jobs description

--- a/index.html
+++ b/index.html
@@ -282,11 +282,25 @@
               <h5>2021 - Present</h5>
               <p><em>Levantine Arbitration</em></p>
               <ul>
-                <li>Implementing communication activities in coordination with project colleagues.</li>
-                <li>Running social media plateforms.</li>
-                <li>Logo designing.</li>
-                <li>Content creation</li>
-                <li>Skills: Canva - Search Engine Optimization (SEO) - Social Media - Communication</li>
+                <li>Using social media management tools like Canva, adobe XD (express) and Figma.</li>
+                <li>Identifying target audience and implementing communication activities.</li>
+                <li>Implementing Real-Time Marketing by monitoring audience.</li>
+                <li>Increasing Social Engagement by 60% by creating LinkedIn presence.</li>
+                <li>Experimenting with Email Marketing Automation Tools for constant contact our 
+                  community: HubSpot, MailChimp, Salesforce.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Digital Marketing Internship Program</h4>
+              <h5>August 2022 - September 2022</h5>
+              <p><em>Girls in marketing</em></p>
+              <ul>
+                <li>Collecting, organizing, and interpreting data in order to reach sales goals by applying 
+                  marketing, Email Marketing and Social Media Marketing Strategies.</li>
+                <li>Learning about attribution models to find out which touchpoints are most effective at getting 
+                  customers to take action by branding development and content creation.</li>
+                <li>Understanding the five core pillars of social media marketing: strategy, planning and 
+                  publishing, listening and engagement, analytics and reporting, and paid social media.</li>
               </ul>
             </div>
           </div>
@@ -296,10 +310,10 @@
               <h5>2018 - present</h5>
               <p><em>@tv_lebanon magasine</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Manage and oversee social media content.</li>
-                <li>Monitor SEO and user engagement and suggest content optimization.</li>
-                <li>Coordinate with companies for advertisement. </li>
+                <li>Creating and managing social media content: 40 posts by average per week.</li>
+                <li>Increasing all engagement KPI within a 170K followers on Instagram ground by 900% 
+                  within the first 6 months of the job via partnerships with local suppliers.</li>
+                <li>Coordinating with companies for advertisement and increasing the adds benefits by 50%.</li>
               </ul>
             </div>
             <div class="resume-item">
