adding to portfolio

--- a/index.html
+++ b/index.html
@@ -353,6 +353,8 @@
         </div>
 
         <img width="70%" src="assets/img/portfolio.jpeg" alt="">
+        <img width="70%" src="assets/img/portfolio2.jpeg" alt="">
+        <img width="70%" src="assets/img/portfolio3.jpeg" alt="">
 
         </div>
 
