--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -352,9 +351,11 @@
           <h2>Portfolio</h2>
         </div>
 
-        <img width="70%" src="assets/img/portfolio.jpeg" alt="">
-        <img width="70%" src="assets/img/portfolio2.jpeg" alt="">
-        <img width="70%" src="assets/img/portfolio3.jpeg" alt="">
+        <img col-lg-6 src="assets/img/p1.jpeg" alt="">
+        <img col-lg-6 src="assets/img/p2.jpeg" alt="">
+        <img col-lg-6 src="assets/img/p3.PNG" alt="">
+        <img col-lg-6 src="assets/img/p4.jpeg" alt="">
+        <img col-lg-6 src="assets/img/p5.jpeg" alt="">
 
         </div>
 
