--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@
           <h2>Portfolio</h2>
         </div>
 
-        <img col-lg-6 src="assets/img/p1.jpeg" alt="">
-        <img col-lg-6 src="assets/img/p2.jpeg" alt="">
-        <img col-lg-6 src="assets/img/p3.PNG" alt="">
-        <img col-lg-6 src="assets/img/p4.jpeg" alt="">
-        <img col-lg-6 src="assets/img/p5.jpeg" alt="">
+        <img col-lg-6 class="portfoliopic" src="assets/img/p1.jpeg" alt="">
+        <img col-lg-6 class="portfoliopic" src="assets/img/p2.jpeg" alt="">
+        <img col-lg-6 class="portfoliopic" src="assets/img/p3.PNG" alt="">
+        <img col-lg-6 class="portfoliopic"src="assets/img/p4.jpeg" alt="">
+        <img col-lg-6 class="portfoliopic" src="assets/img/p5.jpeg" alt="">
 
         </div>
 
